# cse-ghc-plugin

./: .gitignore  AUTHORS.txt  BUILDING  README.md  cse-ghc-plugin.cabal  cse-plugin.cabal
CSE/: Pass.lhs  Plugin.hs  Utilities.hs
tests/: Makefile  Traced.hs
