Name:           cse-plugin
Version:        1.0
Synopsis:       A conversion of the GHC Common Subexpression Elimination pass to a plugin.
Cabal-Version:  >= 1.2
Build-Type:	Simple
License-File:   LICENSE
Author:         The GHC Team
Homepage:       http://www.haskell.org/ghc

Library
    Extensions:     CPP
    Build-Depends:
        base,
        template-haskell,
        ghc-prim,
        ghc >= 6.11
    Exposed-Modules:
        CSE.Plugin
    Other-Modules:
        CSE.Pass
        CSE.Utilities